@@ -9,7 +9,7 @@
 //-----------------------------------------------------------------------------
 
 $GameNameString = "rotc-ethernet";
-$GameVersionString = "p.3+dev1";
+$GameVersionString = "p.3+dev2";
 
 //------------------------------------------------------------------------------
 
