@@ -1,10 +1,11 @@
 What's new?
 ===========
 
-Prototype 3+dev1
+Prototype 3+dev2
 ----------------
 
 - Newbie helper
+- Improved arena window
 - Bugfixes
 
 
